5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1716_2496.log
== SUBMITION (2019-05-14 16:59:47) 
-- CODE:
acumuladora= 0
resultado= 0
while (num != -1):
   num= int(input("digite o numero: "))
	acumuladora = resultado + num

	print(num)
		
	
-- EXECUTION TIME:
0.161238
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 5
    acumuladora = resultado + num
                                ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:05:10) 
-- CODE:
contador= 0
resultado= 0
while (num != -1):
   num= int(input("digite o numero: "))
	acumuladora = resultado + num

	print(num)
		
	
-- ERROR:
File "XXXX", line 5
    acumuladora = resultado + num
                                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:05:49) 
-- CODE:
contador= 0
resultado= 0
while (num != -1):
   num= int(input("digite o numero: "))
	acumuladora = acumuladora + num

	print(num)
		
	
-- ERROR:
File "XXXX", line 5
    acumuladora = acumuladora + num
                                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:52) 
-- CODE:
contador= 0
resultado= 0
num= int(input("digite o numero: "))
while (num != -1):
   num= int(input("digite o numero: "))
	acumuladora = acumuladora + num

	print(num)
		
	
-- ERROR:
File "XXXX", line 6
    acumuladora = acumuladora + num
                                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:36) 
-- CODE:
contador=0
acumuladora= 0
num= int(input("digite o numero: "))
while (num != -1):
   num= int(input("digite o numero: "))
	acumuladora = acumuladora + num

	print(num)
		
	
-- ERROR:
File "XXXX", line 6
    acumuladora = acumuladora + num
                                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
